--- a/AlFurqaanOnlineQuranAcedemy/public/css/main.css
+++ b/AlFurqaanOnlineQuranAcedemy/public/css/main.css
@@ -3165,5 +3165,6 @@ h6 {
         .icons{
           text-align: center !important;
           color: #fff !important;
+          cursor: pointer;
         }
 /*# sourceMappingURL=main.css.map */
